# Slack-Spotify-RP

./: pyproject.toml
ssrp/: __main__.py
ssrp/api/: __init__.py
ssrp/startup/: args.py  startup.py
ssrp/utils/: colors.py
