[tool.poetry]
name = "ssrp"
version = "1.0.0"
description = ""
authors = ["Max Bridgland"]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "0.4.1"
requests = "2.20.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "ssrp.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
